[WK2][GTK] ASSERTION FAILED: m_status == Scheduled in GMainLoopSource https://bugs.webkit.org/show_bug.cgi?id=131220

Reviewed by Philippe Normand.

Unskip inspector-protocol/dom/remove-multiple-nodes.html.

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/151393@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169443 268f45cc-cd09-0410-ab3c-d52691b4dbfc